--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <br>
     <br>
     <br>
-<form action="flower.html">
+<form action="https://jhyric.github.io/hmflower/">
     <button>Flowers</button>
     </form>
 </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="trip.js"></script>
+  </script><script  src="trip.js"></script>
   <link rel="stylesheet" href="style.css">
 </body>
 </html>
