--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
     <br>
 <form action="https://jhyric.github.io/hmflower/">
-    <button>Flowers</button>
+    <button>click me for gift</button>
     </form>
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script><script  src="trip.js"></script>
